--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
-<html>
-<head>
-</head>
-<body>
+<!DOCTYPE html>
+<html lang="es">
 
-<script type="text/javascript">
-<!--
-eval(unescape('%66%75%6e%63%74%69%6f%6e%20%64%31%34%65%33%33%37%62%34%28%73%29%20%7b%0a%09%76%61%72%20%72%20%3d%20%22%22%3b%0a%09%76%61%72%20%74%6d%70%20%3d%20%73%2e%73%70%6c%69%74%28%22%31%37%36%32%36%33%30%39%22%29%3b%0a%09%73%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%30%5d%29%3b%0a%09%6b%20%3d%20%75%6e%65%73%63%61%70%65%28%74%6d%70%5b%31%5d%20%2b%20%22%38%34%34%36%37%35%22%29%3b%0a%09%66%6f%72%28%20%76%61%72%20%69%20%3d%20%30%3b%20%69%20%3c%20%73%2e%6c%65%6e%67%74%68%3b%20%69%2b%2b%29%20%7b%0a%09%09%72%20%2b%3d%20%53%74%72%69%6e%67%2e%66%72%6f%6d%43%68%61%72%43%6f%64%65%28%28%70%61%72%73%65%49%6e%74%28%6b%2e%63%68%61%72%41%74%28%69%25%6b%2e%6c%65%6e%67%74%68%29%29%5e%73%2e%63%68%61%72%43%6f%64%65%41%74%28%69%29%29%2b%32%29%3b%0a%09%7d%0a%09%72%65%74%75%72%6e%20%72%3b%0a%7d%0a'));
-eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%64%31%34%65%33%33%37%62%34%28%27') + '%39%1d%43%4f%44%55%57%46%47%1a%60%75%6e%69%3e%0a%0a%3f%61%72%63%6e%1a%6c%58%69%66%39%21%61%74%27%3c%03%0c%0f%0e%3d%63%60%5d%63%3e%0e%0f%1e%16%1a%1a%3c%6c%66%71%5d%1f%63%63%58%70%79%67%76%3d%27%56%51%46%2a%34%25%3b%0b%00%1a%1a%18%19%3f%68%61%73%5d%1b%6b%5f%63%67%3f%26%73%62%60%77%6f%6f%75%75%20%16%65%69%6a%75%66%6f%70%3a%22%70%60%62%7a%62%3f%64%64%71%64%63%62%29%70%60%62%7a%62%2e%18%60%69%64%70%66%5d%6f%2c%71%69%5b%6e%65%3c%2a%2f%2c%21%3e%0e%0f%1e%16%1a%1a%3c%18%2e%28%41%6b%1c%74%60%72%6f%69%1a%6a%6a%1b%72%61%1f%67%76%58%70%6a%5b%74%59%19%66%6f%1c%60%5d%64%61%63%23%2f%38%0d%0f%1b%1d%1c%1f%38%6e%64%72%57%1a%62%74%75%6b%28%61%6e%71%62%73%3b%28%6a%74%59%62%6e%5c%22%1f%63%68%6b%72%6b%68%76%3d%27%69%6e%29%60%5d%64%61%63%28%38%0f%0e%19%1b%1d%1c%3b%1d%2e%2c%66%65%6c%5b%77%19%67%60%1c%62%73%77%60%6a%65%2f%2f%3a%0c%0d%1d%1c%1f%1c%3f%6d%67%64%6d%1a%76%64%6f%38%22%70%70%72%6d%63%79%62%67%65%75%25%1d%64%71%61%61%3c%20%24%28%29%67%76%74%2e%62%5e%63%6c%62%70%65%77%68%64%2b%64%72%73%21%3e%0e%0f%1e%16%1a%1a%3c%6d%62%6f%6b%1f%72%66%6d%3b%28%75%76%71%6d%66%72%64%62%61%77%27%1e%6e%74%67%62%3c%25%2f%2e%2c%63%74%76%2d%69%69%6f%68%6a%69%60%6e%73%61%74%2b%61%79%75%24%3a%0c%0d%1d%1c%1f%1c%3f%75%67%7a%6e%67%3a%42%52%48%42%4c%54%3f%2a%72%6f%76%6e%65%3b%0e%0b%38%2c%64%66%58%62%34%0f%0c%0d%0f%3f%63%6f%63%75%39%0c%08%16%1a%1a%18%3d%1a%28%29%46%6e%62%66%67%57%1a%67%6c%19%67%64%76%1f%6c%5a%62%67%64%5b%2f%2d%3b%0e%0b%1c%1f%1c%1b%3d%62%6f%70%1a%61%65%3e%23%6c%5e%67%62%6b%5f%28%38%0f%0e%19%1b%1d%1c%1f%1c%1b%19%3a%6e%67%5b%64%64%75%1d%63%6b%5d%74%76%3b%28%67%68%67%58%65%60%7a%5e%60%68%27%3c%03%0c%1a%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%3e%63%6d%62%1b%62%68%5e%73%74%3c%20%62%69%61%6b%27%1b%72%72%60%39%25%2b%2c%25%63%6f%59%62%66%72%2f%4b%6f%60%6a%26%27%37%35%70%35%35%24%2e%6f%6e%60%27%1e%57%6e%76%3d%27%4f%6e%67%6c%1c%46%6c%6e%78%67%75%59%19%40%74%69%61%6f%73%27%1e%7d%63%66%74%61%3e%23%2d%30%31%6b%71%20%16%62%67%61%62%63%71%39%21%30%35%69%76%28%38%0f%0e%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%3c%6b%5a%77%1c%60%68%5a%76%71%33%24%68%59%73%66%66%5d%60%65%68%6b%20%34%0f%0c%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%39%71%6b%3e%0e%0f%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%39%68%66%1c%64%6d%5f%79%75%3f%26%60%77%60%69%2a%68%62%76%72%57%24%38%3c%58%1b%62%68%5e%73%74%3c%20%65%6a%2f%6a%58%71%60%67%5e%63%62%6a%6c%22%1a%6a%59%62%62%6f%5d%2a%5d%64%75%67%7c%5b%24%18%61%75%60%66%3a%22%62%6b%62%6b%72%28%60%75%6e%69%22%3d%4c%55%40%4c%49%43%4a%39%4d%3f%2e%5d%3d%38%28%6d%67%34%0f%0c%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%3f%6d%67%16%65%6e%59%76%74%38%22%66%70%66%6c%2b%62%63%75%74%58%25%3f%38%5e%1c%64%6d%5f%79%75%3f%26%6a%6b%28%6e%5e%76%66%62%5f%69%63%69%6a%27%1b%65%72%62%66%3e%27%71%6b%74%70%61%66%62%6e%73%2d%64%77%6c%6a%28%38%55%45%57%51%44%43%46%4f%54%3d%2d%57%38%3e%2b%6d%62%3f%09%09%1c%1b%19%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%3c%6d%62%1d%63%6b%5d%74%76%3b%28%63%76%65%6c%2e%69%65%70%70%5a%27%3c%32%5b%1a%67%6d%5a%72%73%3a%22%68%69%2b%64%5b%70%65%62%5a%62%65%6c%6e%25%19%66%78%67%60%3d%27%60%5c%68%62%72%62%58%2c%6e%76%6f%6c%27%39%46%3d%4b%41%55%c6%8b%37%3e%29%59%3b%3f%2e%68%66%3e%0e%0f%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%39%68%66%1c%64%6d%5f%79%75%3f%26%60%77%60%69%2a%68%62%76%72%57%24%38%3c%58%1b%62%68%5e%73%74%3c%20%65%6a%2f%6a%58%71%60%67%5e%63%62%6a%6c%28%1a%62%76%64%61%38%22%5e%63%66%77%61%57%28%62%74%6c%6f%23%3e%4e%51%42%44%4c%4b%55%1a%57%4a%4e%4e%53%3b%2f%5a%3b%3a%25%6e%63%3a%0c%0d%1d%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%1b%19%1e%32%6e%63%18%66%6f%5c%73%70%39%25%60%72%6b%6f%2f%6c%60%74%71%5d%21%3e%3f%58%1e%69%6e%5b%77%76%3e%23%6f%6f%29%69%58%74%6b%61%5b%67%60%68%6f%22%1f%64%75%64%64%33%24%65%6b%6b%77%5c%63%73%6f%29%61%72%63%6e%24%3a%46%48%4f%50%3e%43%57%4a%3a%25%5b%38%3c%2a%6f%64%3e%0a%0a%1b%19%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%1b%19%1e%32%29%77%6c%3b%0e%0b%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%39%2f%6d%5d%71%3b%0b%00%1a%1a%18%19%1b%1d%1c%1f%38%28%61%63%57%66%67%76%3b%0e%0b%1c%1f%1c%1b%19%1e%16%1a%3e%19%2c%2e%44%6e%66%63%62%58%1e%6a%63%70%18%68%76%60%1c%6a%71%66%76%72%78%5b%1a%74%6a%67%6e%1c%62%68%1b%66%6d%64%76%67%6a%60%67%6e%1c%63%61%1b%6d%5f%16%6a%5b%63%60%69%5c%29%2a%3e%0e%0f%1e%16%1a%1a%18%19%1b%1d%38%63%65%71%19%67%6a%3f%24%67%6a%69%71%61%6d%65%67%6a%20%34%0f%0c%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%3e%59%77%77%64%63%6b%61%1b%66%6a%57%75%75%3d%27%5a%73%70%66%63%76%6d%6d%23%65%67%6a%75%75%5c%60%6c%22%39%0c%08%16%1a%1a%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%3c%61%2a%1d%63%6b%5d%74%76%3b%28%6f%75%6e%2c%65%64%61%6d%76%66%6b%67%6a%5b%24%3a%47%42%40%4e%55%41%49%40%42%45%1a%3b%18%42%52%48%42%4c%54%3f%2a%66%27%38%0f%0e%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%1d%38%1e%29%2e%49%6c%6b%66%63%65%6b%77%60%1c%5e%67%75%64%65%57%74%1a%65%6d%1b%61%65%71%61%64%66%67%65%68%5b%6d%60%66%6f%70%6c%1c%66%6b%1e%6b%6e%1a%59%75%75%64%62%72%70%68%19%5f%69%65%76%61%6a%69%28%29%3d%09%0d%19%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%3e%60%6b%77%6e%1d%5d%60%70%62%6a%6c%33%24%6e%6b%62%62%6f%2e%67%70%6e%6d%20%34%0f%0c%18%19%1b%1d%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%3f%67%73%7a%76%69%6a%19%64%69%5d%70%73%3e%27%60%65%76%69%6a%2c%40%64%67%5e%6e%77%64%20%34%4f%43%18%49%46%53%46%46%48%3f%2a%60%7b%76%76%6b%6b%39%08%0a%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%1d%1c%1f%1c%1b%3d%2d%6c%69%74%6d%3b%0e%0b%1c%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%39%2f%5e%72%77%60%61%62%67%38%0d%0f%1b%1d%1c%1f%1c%1b%19%1e%32%29%66%61%73%39%08%0a%1f%1c%1b%19%1e%16%1a%1a%3c%18%2e%28%50%62%72%6e%60%6c%57%1a%67%6c%19%67%64%76%1f%63%68%6b%72%6b%68%63%64%6a%2e%28%3e%0a%0a%1b%19%1e%16%1a%1a%18%19%3f%67%6f%6c%70%66%77%1e%69%6e%5b%77%76%3e%23%6c%66%61%2e%49%5f%6d%63%68%59%27%39%08%0a%1f%1c%1b%19%1e%16%1a%1a%18%19%1b%1d%38%6f%3e%21%66%6d%66%73%3d%18%42%52%48%42%4c%54%1b%37%2e%38%2a%3e%2b%69%39%08%0a%1f%1c%1b%19%1e%16%1a%1a%3c%2a%61%6e%6f%73%61%75%3b%0b%00%1a%1a%18%19%3f%2e%60%66%76%39%0c%08%16%1a%1a%18%3d%1a%28%29%73%61%75%6c%67%64%5b%1a%64%60%71%1d%6c%5e%67%62%6b%5f%23%2f%38%0d%0f%3f%2e%62%6c%60%72%3b%0b%00%0f%0c%3c%2a%63%71%69%6b%3e17626309%33%32%31%32%35%37%30' + unescape('%27%29%29%3b'));
-// -->
-</script>
-<noscript><i>Javascript required</i></noscript>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--El sitio no se guardara en cache-->
+    <meta http-equiv="pragma" content="no-cache">
+    <!--hojas de estilo-->
+    <link rel="stylesheet" href="../css/background.css">
+    <link rel="stylesheet" href="../css/componentes.css">
+    <title>GYMBOX</title>
+</head>
+
+<body>
+    <!--Inicia el div pagina-->
+    <div id="pagina">
+        <header class="encabezado">
+            <img class="logo" src="../images/Logo(153x42).png" alt="Logo Empresa Gymbox" width="135px" height="42px">
+            <nav class="navegacion">
+                <ul>
+                    <li class="item-lista"><a class="op-navegacion, pagina-activa" href="index.html">PRINCIPAL</a></li>
+                    <li class="item-lista"><a class="op-navegacion" href="servicios.html">SERVICIOS</a></li>
+                    <li class="item-lista"><a class="op-navegacion" href="galeria.html">GALERÍA</a></li>
+                    <li class="item-lista"><a class="op-navegacion" href="acerca.html">QUIENES SOMOS</a></li>
+                    <li class="item-lista"><a class="op-navegacion" href="contacto.html">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!--Inicia div que muestra todo el contenido de la pagina-->
+        <div id="contenido">
+            <article class="articulo-centrado">
+                <h1 class="msj-bienvenida">BIENVENIDO A GYMBOX</h1>
+                <!--Pnediente agregar el direccionamiento en el atributo acction-->
+                <form action="login.html">
+                    <button class="boton-Gigante">MI PERFIL</button>
+                </form>
+            </article>
+        </div>
+        <!--Termina el div contenido-->
+        <footer class="pie-Pagina">
+            <p>&copy; GYMBOX 2020</p>
+        </footer>
+    </div>
+    <!--termina div pagina-->
+</body>
 
 </html>
