Se actualiza el sitio

--- a/acerca.html
+++ b/acerca.html
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--El sitio no se guardara en cache-->
-    <meta http-equiv="pragma" content="no-cache" />
-    <!--hojas de estilo-->
-    <link rel="stylesheet" href="../css/background.css" />
-    <link rel="stylesheet" href="../css/componentes.css" />
-    <link rel="stylesheet" href="../js/selector-pagina.js" />
-    <title>GYMBOX - QUIENES SOMOS</title>
-  </head>
 
-  <body>
-    <!--Inicia el div pagina-->
-    <div id="pagina">
-      <header class="encabezado">
-        <img class="logo" src="../images/Logo(153x42).png" alt="Logo Empresa Gymbox" width="135px" height="42px" />
-        <nav class="navegacion">
-          <ul>
-            <li class="item-lista"><a class="op-navegacion" href="index.html">PRINCIPAL</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="servicios.html">SERVICIOS</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="galeria.html">GALERÍA</a></li>
-            <li class="item-lista"><a class="op-navegacion, pagina-activa" href="acerca.html">QUIENES SOMOS</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="contacto.html">CONTACTO</a></li>
-          </ul>
-        </nav>
-      </header>
-      <!--Inicia div que muestra todo el contenido de la pagina-->
-      <div id="contenido">
-        <article class="seccion-acerca-de">
-          <h2 class="titulos-acerca-de" id="titulo-empresa">GYMBOX</h2>
-          <p class="parrafo">
-            En Gymbox estamos comprometidos con el buen servicio y atención a nuestros usuarios. Integrado por un equipo
-            de instructores profesionales, Gymbox te brinda el ambiente más agradable para que tu rutina de ejercicios
-            se ajuste a tus necesidades. Nos aseguramos de que cuentes con una excelente atención desde que entras hasta
-            que dejas el edificio. Nuestro equipo de profesionales del fitness se compone de instructores certificados
-            que se encuentran siempre a tu disposición.
-          </p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--El sitio no se guardara en cache-->
+  <meta http-equiv="pragma" content="no-cache" />
+  <!--Hojas de estilo-->
+  <link rel="stylesheet" href="../css/background.css" />
+  <link rel="stylesheet" href="../css/componentes.css" />
+  <link rel="stylesheet" href="../js/selector-pagina.js" />
+  <title>GYMBOX - QUIENES SOMOS</title>
+</head>
 
-          <h2 class="titulos-acerca-de" id="titulo-Mision">Misión</h2>
-          <p class="parrafo">
-            Mejorar la calidad de vida de nuestros clientes a través de la filosofía de la practica del ejercicio, asi
-            como de distintos programas deportivos. Inculcar en la vida de las personas el valor de la salud y el
-            ejercicio.
-          </p>
+<body>
+  <!--Inicia el div pagina-->
+  <div id="pagina">
+    <header class="encabezado">
+      <img class="logo" src="../images/Logo(153x42).png" alt="Logo de la Empresa Gymbox" width="135px" height="42px" />
+      <nav class="navegacion">
+        <ul>
+          <li class="item-lista"><a class="op-navegacion" href="index.html">PRINCIPAL</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="servicios.html">SERVICIOS</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="galeria.html">GALERÍA</a></li>
+          <li class="item-lista"><a class="op-navegacion, pagina-activa" href="acerca.html">QUIENES SOMOS</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="contacto.html">CONTACTO</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!--Inicia div que muestra todo el contenido de la pagina-->
+    <div id="contenido">
+      <article class="seccion-acerca-de">
+        <h2 class="titulos-acerca-de" id="titulo-empresa">GYMBOX</h2>
+        <p class="parrafo">
+          En Gymbox estamos comprometidos con el buen servicio y atención a nuestros usuarios. Integrado por un equipo
+          de instructores profesionales, Gymbox te brinda el ambiente más agradable para que tu rutina de ejercicios
+          se ajuste a tus necesidades. Nos aseguramos de que cuentes con una excelente atención desde que entras hasta
+          que dejas el edificio. Nuestro equipo de profesionales del fitness se compone de instructores certificados
+          que se encuentran siempre a tu disposición.
+        </p>
 
-          <h2 class="titulos-acerca-de" id="titulo-Vision">Visión</h2>
-          <p class="parrafo">
-            Ser el gimnasio líder de la comunidad brindando bienestar a nuestros miembros y en general a la población,
-            generando e inculcando valores a nuestra clientes, y a nuestros colaboradores.
-          </p>
-        </article>
-      </div>
-      <!--Termina el div contenido-->
-      <footer class="pie-Pagina">
-        <p>&copy; GYMBOX 2020</p>
-      </footer>
+        <h2 class="titulos-acerca-de" id="titulo-Mision">Misión</h2>
+        <p class="parrafo">
+          Mejorar la calidad de vida de nuestros clientes a través de la filosofía de la practica del ejercicio, asi
+          como de distintos programas deportivos. Inculcar en la vida de las personas el valor de la salud y el
+          ejercicio.
+        </p>
+
+        <h2 class="titulos-acerca-de" id="titulo-Vision">Visión</h2>
+        <p class="parrafo">
+          Ser el gimnasio líder de la comunidad brindando bienestar a nuestros miembros y en general a la población,
+          generando e inculcando valores a nuestra clientes, y a nuestros colaboradores.
+        </p>
+      </article>
     </div>
-    <!--termina div pagina-->
-  </body>
+    <!--Termina el div contenido-->
+    <footer class="pie-Pagina">
+      <p>&copy; GYMBOX 2020</p>
+    </footer>
+  </div>
+  <!--termina div pagina-->
+</body>
+
 </html>
