--- a/galeria.html
+++ b/galeria.html
@@ -1,116 +1,126 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--El sitio no se guardara en cache-->
-    <meta http-equiv="pragma" content="no-cache" />
-    <!--hojas de estilo-->
-    <link rel="stylesheet" href="../css/background-galeria.css" />
-    <link rel="stylesheet" href="../css/componentes.css" />
-    <link rel="stylesheet" href="../css/lightbox.min.css" />
-    <!--Script para la galeria-->
-    <script type="text/javascript" src="../js/lightbox-plus-jquery.min.js"></script>
 
-    <title>GYMBOX - GALERÍA</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--El sitio no se guardara en cache-->
+  <meta http-equiv="pragma" content="no-cache" />
+  <!--Hojas de estilo-->
+  <link rel="stylesheet" href="../css/background-galeria.css" />
+  <link rel="stylesheet" href="../css/componentes.css" />
+  <link rel="stylesheet" href="../css/lightbox.min.css" />
+  <!--Script para la galeria-->
+  <script type="text/javascript" src="../js/lightbox-plus-jquery.min.js"></script>
 
-  <body id="body-de-galeria">
-    <!--Inicia el div pagina-->
-    <div id="pagina">
-      <header class="encabezado">
-        <img class="logo" src="../images/Logo(153x42).png" alt="Logo Empresa Gymbox" width="135px" height="42px" />
-        <nav class="navegacion">
-          <ul>
-            <li class="item-lista"><a class="op-navegacion" href="index.html">PRINCIPAL</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="servicios.html">SERVICIOS</a></li>
-            <li class="item-lista"><a class="op-navegacion, pagina-activa" href="galeria.html">GALERÍA</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="acerca.html">QUIENES SOMOS</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="contacto.html">CONTACTO</a></li>
-          </ul>
-        </nav>
-      </header>
-      <!--Inicia div que muestra todo el contenido de la pagina-->
-      <div id="contenido-galeria">
-        <div class="galeria">
-          <a href="../images/img (1).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (1)-m.jpg" alt="" width="250" height="180"
-          /></a>
+  <title>GYMBOX - GALERÍA</title>
+</head>
 
-          <a href="../images/img (2).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (2)-m.jpg" alt="" width="250" height="180"
-          /></a>
+<body id="body-de-galeria">
+  <!--Inicia el div pagina-->
+  <div id="pagina">
+    <header class="encabezado">
+      <img class="logo" src="../images/Logo(153x42).png" alt="Logo de la Empresa Gymbox" width="135px" height="42px" />
+      <nav class="navegacion">
+        <ul>
+          <li class="item-lista"><a class="op-navegacion" href="index.html">PRINCIPAL</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="servicios.html">SERVICIOS</a></li>
+          <li class="item-lista"><a class="op-navegacion, pagina-activa" href="galeria.html">GALERÍA</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="acerca.html">QUIENES SOMOS</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="contacto.html">CONTACTO</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!--Inicia div que muestra todo el contenido de la pagina-->
+    <div id="contenido-galeria">
+      <div class="galeria">
+        <a href="../images/img (1).jpg" data-lightbox="img-galeria"
+          data-alt="Un hombre utliza mancuernas miestras escucha música"><img src="../images/img (1)-m.jpg"
+            alt="Un hombre utliza mancuernas miestras escucha música" width="250" height="180" /></a>
 
-          <a href="../images/img (3).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (3)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (2).jpg" data-lightbox="img-galeria"
+          data-alt="Una mujer toma un descanso luego de hacer ejecicios"><img src="../images/img (2)-m.jpg"
+            alt="Una mujer toma un descanso luego de hacer ejecicios" width="250" height="180" /></a>
 
-          <a href="../images/img (4).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (4)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (3).jpg" data-lightbox="img-galeria"
+          data-alt="Una mujer utiliza máquina de musculación para trabajar su espalda"><img
+            src="../images/img (3)-m.jpg" alt="Una mujer utiliza máquina de musculación para trabajar su espalda"
+            width="250" height="180" /></a>
 
-          <a href="../images/img (5).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (5)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (4).jpg" data-lightbox="img-galeria"
+          data-alt="Una mujer vistiendo ropa deportiva, utiliza mancuernas para trabajar sus brazos"><img
+            src="../images/img (4)-m.jpg"
+            alt="Una mujer vistiendo ropa deportiva, utiliza mancuernas para trabajar sus brazos" width="250"
+            height="180" /></a>
 
-          <a href="../images/img (6).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (6)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (5).jpg" data-lightbox="img-galeria"
+          data-alt="Un grupo de mujeres realizan una rutina de Spinning&reg;"><img src="../images/img (5)-m.jpg"
+            alt="Un grupo de mujeres realizan una rutina de Spinning&reg;" width="250" height="180" /></a>
 
-          <a href="../images/img (7).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (7)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (6).jpg" data-lightbox="img-galeria"
+          data-alt="Una mujer entrena el levantamiento de pesas de barra y discos"><img src="../images/img (6)-m.jpg"
+            alt="Una mujer entrena el levantamiento de pesas de barra y discos" width="250" height="180" /></a>
 
-          <a href="../images/img (8).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (8)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (7).jpg" data-lightbox="img-galeria"
+          data-alt="Un grupo de personas realizan ejercio en la diferentes máquinas del establecimiento"><img
+            src="../images/img (7)-m.jpg"
+            alt="Un grupo de personas realizan ejercio en la diferentes máquinas del establecimiento" width="250"
+            height="180" /></a>
 
-          <a href="../images/img (9).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (9)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (8).jpg" data-lightbox="img-galeria"
+          data-alt="Una mujer realiza ejercicios con banda elastica""
+            ><img src=" ../images/img (8)-m.jpg" alt="Una mujer realiza ejercicios con banda elastica"" width=" 250"
+          height="180" /></a>
 
-          <a href="../images/img (10).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (10)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (9).jpg" data-lightbox="img-galeria"
+          data-alt="Salón de máquinas de musculación y máquinas de Spinning&reg;"><img src="../images/img (9)-m.jpg"
+            alt="Salón de máquinas de musculación y máquinas de Spinning&reg;" width="250" height="180" /></a>
 
-          <a href="../images/img (11).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (11)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (10).jpg" data-lightbox="img-galeria"
+          data-alt="Una mujer entrena el levantamiento de pesas de barra y discos"><img src="../images/img (10)-m.jpg"
+            alt="Una mujer entrena el levantamiento de pesas de barra y discos" width="250" height="180" /></a>
 
-          <a href="../images/img (12).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (12)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (11).jpg" data-lightbox="img-galeria"
+          data-alt="Un hombre utiliza máquina de musculación para trabajar su espalda"><img
+            src="../images/img (11)-m.jpg" alt="Un hombre utiliza máquina de musculación para trabajar su espalda"
+            width="250" height="180" /></a>
 
-          <a href="../images/img (13).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (13)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (12).jpg" data-lightbox="img-galeria"
+          data-alt="Un hombre entrena el levantamiento de pesas de barra y discos"><img src="../images/img (12)-m.jpg"
+            alt="Un hombre entrena el levantamiento de pesas de barra y discos" width="250" height="180" /></a>
 
-          <a href="../images/img (14).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (14)-m.jpg" alt="" width="250" height="180"
-          /></a>
+        <a href="../images/img (13).jpg" data-lightbox="img-galeria"
+          data-alt="Salón de máquinas de musculación del establecimiento"><img src="../images/img (13)-m.jpg"
+            alt="Salón de máquinas de musculación del establecimiento" width="250" height="180" /></a>
 
-          <a href="../images/img (15).jpg" data-lightbox="img-galeria"
-            ><img src="../images/img (15)-m.jpg" alt="" width="250" height="180"
-          /></a>
-        </div>
+        <a href="../images/img (14).jpg" data-lightbox="img-galeria"
+          data-alt="Un hombre entrena el levantamiento de pesas de barra y discos"><img src="../images/img (14)-m.jpg"
+            alt="Un hombre entrena el levantamiento de pesas de barra y discos" width="250" height="180" /></a>
+
+        <a href="../images/img (15).jpg" data-lightbox="img-galeria"
+          data-alt="Una mujer ulitiza máquina de musculación para trabajar su espalda"><img
+            src="../images/img (15)-m.jpg" alt="Una mujer ulitiza máquina de musculación para trabajar su espalda"
+            width="250" height="180" /></a>
       </div>
-      <!--Termina el div contenido-->
-      <footer class="pie-Pagina">
-        <p>&copy; GYMBOX 2020</p>
-      </footer>
     </div>
-    <!--Termina div pagina-->
-    <!--Modificacion del Script para galeria-->
-    <script>
-      lightbox.option({
-        alwaysShowNavOnTouchDevices: false,
-        resizeDuration: 250,
-        wrapAround: true,
-        maxWith: 700,
-        maxHeight: 700,
-        wrapAround: true,
-        disableScrolling: false,
-      });
-    </script>
-  </body>
+    <!--Termina el div contenido-->
+    <footer class="pie-Pagina">
+      <p>&copy; GYMBOX 2020</p>
+    </footer>
+  </div>
+  <!--Termina div pagina-->
+  <!--Modificacion del Script para galeria-->
+  <script>
+    lightbox.option({
+      alwaysShowNavOnTouchDevices: false,
+      resizeDuration: 250,
+      wrapAround: true,
+      maxWith: 700,
+      maxHeight: 700,
+      wrapAround: true,
+      disableScrolling: false,
+    });
+  </script>
+</body>
+
 </html>
