--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--El sitio no se guardara en cache-->
     <meta http-equiv="pragma" content="no-cache">
-    <!--hojas de estilo-->
+    <!--Hojas de estilo-->
     <link rel="stylesheet" href="../css/background.css">
     <link rel="stylesheet" href="../css/componentes.css">
     <title>GYMBOX</title>
@@ -16,7 +16,8 @@
     <!--Inicia el div pagina-->
     <div id="pagina">
         <header class="encabezado">
-            <img class="logo" src="../images/Logo(153x42).png" alt="Logo Empresa Gymbox" width="135px" height="42px">
+            <img class="logo" src="../images/Logo(153x42).png" alt="Logo de la Empresa Gymbox" width="135px"
+                height="42px">
             <nav class="navegacion">
                 <ul>
                     <li class="item-lista"><a class="op-navegacion" href="index.html">PRINCIPAL</a></li>
@@ -39,17 +40,14 @@
                     <label class="lbl" for="txt_contrasena">Contraseña:</label>
                     <input class="input_txt" id="txt_contrasena" type="password" name="contrasena" required="required">
 
-
                     <button class="botones" id="boton_formulario">Ingresar</button>
                 </form>
             </fieldset>
         </div>
         <!--Termina el div contenido-->
-        <!---------------------------------------------------------------------------------Termina div id=contenido------------------------------------------------->
         <footer class="pie-Pagina">
             <p>&copy; GYMBOX 2020</p>
         </footer>
-
     </div>
     <!--termina div pagina-->
 </body>
