--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--El sitio no se guardara en cache-->
     <meta http-equiv="pragma" content="no-cache">
-    <!--hojas de estilo-->
+    <!--Hojas de estilo-->
     <link rel="stylesheet" href="../css/background.css">
     <link rel="stylesheet" href="../css/componentes.css">
     <title>GYMBOX</title>
@@ -16,7 +16,8 @@
     <!--Inicia el div pagina-->
     <div id="pagina">
         <header class="encabezado">
-            <img class="logo" src="../images/Logo(153x42).png" alt="Logo Empresa Gymbox" width="135px" height="42px">
+            <img class="logo" src="../images/Logo(153x42).png" alt="Logo de la Empresa Gymbox" width="135px"
+                height="42px">
             <nav class="navegacion">
                 <ul>
                     <li class="item-lista"><a class="op-navegacion, pagina-activa" href="index.html">PRINCIPAL</a></li>
@@ -31,7 +32,6 @@
         <div id="contenido">
             <article class="articulo-centrado">
                 <h1 class="msj-bienvenida">BIENVENIDO A GYMBOX</h1>
-                <!--Pnediente agregar el direccionamiento en el atributo acction-->
                 <form action="login.html">
                     <button class="boton-Gigante">MI PERFIL</button>
                 </form>
