--- a/servicios.html
+++ b/servicios.html
@@ -1,54 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--El sitio no se guardara en cache-->
-    <meta http-equiv="pragma" content="no-cache" />
-    <!--hojas de estilo-->
-    <link rel="stylesheet" href="../css/background.css" />
-    <link rel="stylesheet" href="../css/componentes.css" />
-    <title>GYMBOX - SERVICIOS</title>
-  </head>
 
-  <body>
-    <!--Inicia el div pagina-->
-    <div id="pagina">
-      <header class="encabezado">
-        <img class="logo" src="../images/Logo(153x42).png" alt="Logo Empresa Gymbox" width="135px" height="42px" />
-        <nav class="navegacion">
-          <ul>
-            <li class="item-lista"><a class="op-navegacion" href="index.html">PRINCIPAL</a></li>
-            <li class="item-lista"><a class="op-navegacion, pagina-activa" href="servicios.html">SERVICIOS</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="galeria.html">GALERÍA</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="acerca.html">QUIENES SOMOS</a></li>
-            <li class="item-lista"><a class="op-navegacion" href="contacto.html">CONTACTO</a></li>
-          </ul>
-        </nav>
-      </header>
-      <!--Inicia div que muestra todo el contenido de la pagina-->
-      <div id="contenido-servicios">
-        <figure class="seccion-servicios">
-          <img class="img-seccion" src="../images/servicio-01.jpg" alt="" />
-          <!--<h2 class="titulos-servicios">Spinning</h2>-->
-          <figcaption class="titulos-servicios">Spinning</figcaption>
-        </figure>
-        <figure class="seccion-servicios">
-          <img class="img-seccion" src="../images/servicio-02.jpg" alt="" />
-          <!--<h2 class="titulos-servicios">Yoga</h2>-->
-          <figcaption class="titulos-servicios">Yoga</figcaption>
-        </figure>
-        <figure class="seccion-servicios">
-          <img class="img-seccion" src="../images/servicio-03.jpg" alt="" />
-          <!--<h2 class="titulos-servicios">Crossfit</h2>-->
-          <figcaption class="titulos-servicios">Crossfit</figcaption>
-        </figure>
-      </div>
-      <!--Termina el div contenido-->
-      <footer class="pie-Pagina">
-        <p>&copy; GYMBOX 2020</p>
-      </footer>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--El sitio no se guardara en cache-->
+  <meta http-equiv="pragma" content="no-cache" />
+  <!--Hojas de estilo-->
+  <link rel="stylesheet" href="../css/background.css" />
+  <link rel="stylesheet" href="../css/componentes.css" />
+  <title>GYMBOX - SERVICIOS</title>
+</head>
+
+<body>
+  <!--Inicia el div pagina-->
+  <div id="pagina">
+    <header class="encabezado">
+      <img class="logo" src="../images/Logo(153x42).png" alt="Logo de la Empresa Gymbox" width="135px" height="42px" />
+      <nav class="navegacion">
+        <ul>
+          <li class="item-lista"><a class="op-navegacion" href="index.html">PRINCIPAL</a></li>
+          <li class="item-lista"><a class="op-navegacion, pagina-activa" href="servicios.html">SERVICIOS</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="galeria.html">GALERÍA</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="acerca.html">QUIENES SOMOS</a></li>
+          <li class="item-lista"><a class="op-navegacion" href="contacto.html">CONTACTO</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!--Inicia div que muestra todo el contenido de la pagina-->
+    <div id="contenido-servicios">
+      <figure class="seccion-servicios">
+        <img class="img-seccion" src="../images/servicio-01.jpg"
+          alt="Un grupo de mujeres realizan rutina de Spinning&reg;" />
+        <figcaption class="titulos-servicios">Spinning</figcaption>
+      </figure>
+      <figure class="seccion-servicios">
+        <img class="img-seccion" src="../images/servicio-02.jpg" alt="Un grupo de personas practican Yoga" />
+        <figcaption class="titulos-servicios">Yoga</figcaption>
+      </figure>
+      <figure class="seccion-servicios">
+        <img class="img-seccion" src="../images/servicio-03.jpg"
+          alt="Una mujer entrena el levantamiento de pesas de barra y discos" />
+        <figcaption class="titulos-servicios">Crossfit</figcaption>
+      </figure>
     </div>
-    <!--termina div pagina-->
-  </body>
+    <!--Termina el div contenido-->
+    <footer class="pie-Pagina">
+      <p>&copy; GYMBOX 2020</p>
+    </footer>
+  </div>
+  <!--termina div pagina-->
+</body>
+
 </html>
